--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ Author URI: http://webthemez.com/
 <!--[if lt IE 9]> 
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <![endif]-->
-<title>Coming soon html template free download</title>
+<title>Coming soon  </title>
 <meta name="description" content="">
 <meta name="author" content="WebThemez">
 <!--[if lt IE 9]>
@@ -108,11 +108,9 @@ Author URI: http://webthemez.com/
   <div class="container">
     <div class="row feature design">
       <div class="six columns right">
-        <h2>Our Company</h2>
-        <p>Lorem ipsum dolor sit amet, ea eum labitur scsstie percipitoleat fabulas complectitur deterruisset at pro. Odio quaeque reformidans est eu, expetendis intellegebat has ut, viderer invenire ut his. Has molestie percipit an. Falli volumus efficiantur sed id, ad vel noster propriae. Ius ut etiam vivendo, graeci iudicabit constituto at mea. No soleat fabulas prodesset vel, ut quo solum dicunt.
-          Nec et jority have suffered alteration. </p>
-        <p>Odio quaeque reformidans est eu, expetendis intellegebat has ut, viderer invenire ut his. Has molestie percipit an. Falli volumus efficiantur sed id, ad vel noster propriae. Ius ut etiam vivendo, graeci iudicabit constituto at mea. No soleat fabulas prodesset vel, ut quo solum dicunt.
-          Nec et amet vidisse mentitumsstie percipitoleat fabulas. </p>
+        <h2>About our club y</h2>
+        <p>MIT HackerEarth club is an orgnization that helps the studnet by hosting workshop and events based on new techonologies. </p>
+        
       </div>
       <div class="six columns feature-media left"> <img src="images/picture-136.png" alt=""> </div>
     </div>
