--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ Author URI: http://webthemez.com/
 	<div class="container">
 	    	<div class="row">
 			<div class="col-md-12">
-				<div class="aligncenter"><h2 class="aligncenter">Our Services</h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores quae porro consequatur aliquam, incidunt eius magni provident, doloribus omnis minus ovident, doloribus omnis minus temporibus perferendis nesciunt..</div>
+				<div class="aligncenter"><h2 class="aligncenter">Our events</h2></div>
 				<br>
 			</div>
 		</div>
