--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ Author URI: http://webthemez.com/
   <div class="banner-container">
     <div class="container"> 
       <div class="heading text-center">
-	   <div class="logo"> <img src="" alr='logo'/> </div>
+	   <div class="logo"> <img src="images/Hakcerearth.png" alr='logo'/> </div>
          </div>
       <div class="countdown styled"></div>
 	  <div class="heading text-center">
