--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ Author URI: http://webthemez.com/
   <div class="container">
     <div class="row feature design">
       <div class="six columns right">
-        <h2>About our club y</h2>
+        <h2>About our club </h2>
         <p>MIT HackerEarth club is an orgnization that helps the studnet by hosting workshop and events based on new techonologies. </p>
         
       </div>
