--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ Author URI: http://webthemez.com/
         <p>MIT HackerEarth club is an orgnization that helps the studnet by hosting workshop and events based on new techonologies. </p>
         
       </div>
-      <div class="six columns feature-media left"> <img src="images/picture-136.png" alt=""> </div>
+      <div class="six columns feature-media left"> <img src="images/Hakcerearth.png" alt=""> </div>
     </div>
   </div>
 </section>
