--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ Author URI: http://webthemez.com/
   <div id="menuToggle"><i class="fa fa-bars"></i></div>
   <ul class="menuLinks">
     <li class="active" id="firstLink"><a href="#home" class="scroll-link">Home</a></li>
-    <li><a href="#services" class="scroll-link">Services</a></li>
+    <li><a href="#services" class="scroll-link">events</a></li>
     <li><a href="#aboutUs" class="scroll-link">About Us</a></li>
     <li><a href="#contactUs" class="scroll-link">Contact Us</a></li>
   </ul>
